<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add_tag"
        android:title="@string/add_tag"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_move_photo"
        android:title="@string/move_photo"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete_photo"
        android:icon="@drawable/ic_action_delete_photo"
        android:title="@string/delete"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_action_image_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete_tag"
        android:title="@string/delete_tag"
        app:showAsAction="ifRoom" />


</menu>