<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="20dp">



    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/tag_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/tagTypeSpinnerSearch"
            android:layout_width="221dp"
            android:layout_height="50dp"
            android:width="100px" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/tag_value"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/TagValueSearch"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:width="100px" />
    </TableRow>


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />


    <Spinner android:id="@+id/junctionSpinner"
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:width="100px" />

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/tag_type"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/tagTypeSpinnerSearch2"
            android:layout_width="221dp"
            android:layout_height="50dp"
            android:width="100px" />
    </TableRow>



    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:text="@string/tag_value"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/TagValueSearch2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:width="100px" />
    </TableRow>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_column="2"

        android:textSize="18sp" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:text="@string/search"
            android:textColor="@color/movieFore"
            android:background="@color/movieBack"
            app:backgroundTint="@null"
            android:onClick="searchButtonFunction"/>
    </TableRow>

</TableLayout>

